--- a/public/market.html
+++ b/public/market.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>📊 Stato Mercato</title>
+  <title>etf-service</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 20px; }
     h1 { margin-bottom: 10px; }
@@ -14,7 +14,7 @@
   </style>
 </head>
 <body>
-  <h1>📊 Stato Mercato</h1>
+  <h1>etf-service</h1>
   <h2 id="marketStatus">Stato Mercato: ...</h2>
 
   <table id="marketTable">
