--- a/public/market-mobile.html
+++ b/public/market-mobile.html
@@ -2,22 +2,29 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8" />
-  <title>ETF Service - Mobile View</title>
+  <title>ETF Service - Market Status</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 10px;
+      margin: 20px;
       background: #f9f9f9;
     }
     h1 {
-      font-size: 1.2em;
       color: #333;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 15px;
+    }
+    th, td {
+      border: 1px solid #ccc;
+      padding: 8px;
       text-align: center;
     }
-    .status {
-      text-align: center;
-      margin: 10px 0;
+    th {
+      background: #eee;
     }
     .open {
       color: green;
@@ -27,33 +34,26 @@
       color: red;
       font-weight: bold;
     }
-    .card {
-      background: #fff;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      margin: 8px 0;
-      padding: 10px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    }
-    .card h2 {
-      margin: 0;
-      font-size: 1em;
-      color: #222;
-    }
-    .card p {
-      margin: 4px 0;
-      font-size: 0.9em;
-    }
-    .price {
-      font-size: 1.1em;
-      font-weight: bold;
+    tbody tr:nth-child(even) {
+      background: #f2f2f2;
     }
   </style>
 </head>
 <body>
-  <h1>📊 ETF Market (Mobile)</h1>
+  <h1>📊 ETF Market Status</h1>
   <div id="status"></div>
-  <div id="etf-list"></div>
+  <table id="etf-table">
+    <thead>
+      <tr>
+        <th scope="col">Simbolo</th>
+        <th scope="col">Nome</th>
+        <th scope="col">Prezzo</th>
+        <th scope="col">PreviousClose</th>
+        <th scope="col">DailyChange</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
 
   <script>
     async function loadMarketStatus() {
@@ -67,20 +67,20 @@
           <p>Mercato: <span class="${json.open ? "open" : "closed"}">${json.status}</span></p>
         `;
 
-        const listDiv = document.getElementById("etf-list");
-        listDiv.innerHTML = "";
+        const tbody = document.querySelector("#etf-table tbody");
+        tbody.innerHTML = "";
 
-        json.values.data.forEach(etf => {
-          const card = document.createElement("div");
-          card.className = "card";
-          card.innerHTML = `
-            <h2>${etf.label} (${etf.symbol})</h2>
-            <p class="price">${etf.price ?? "n/a"} €</p>
-            <p>DailyChange: ${etf.dailyChange}</p>
-            <p>PrevClose: ${etf.previousClose ?? "-"}</p>
-            <p>Stato: ${etf.status ?? json.status}</p>
+        const data = json.values?.data ?? [];
+        data.forEach(etf => {
+          const row = document.createElement("tr");
+          row.innerHTML = `
+            <td>${etf.symbol}</td>
+            <td>${etf.label}</td>
+            <td>Prezzo: ${etf.price ?? "-"} €</td>
+            <td>${etf.previousClose ?? "-"} €</td>
+            <td>${etf.dailyChange ?? "-"} %</td>
           `;
-          listDiv.appendChild(card);
+          tbody.appendChild(row);
         });
       } catch (err) {
         document.getElementById("status").innerHTML =
