--- a/public/market-mobile.html
+++ b/public/market-mobile.html
@@ -2,25 +2,28 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8" />
-  <title>ETF Service - Market Status</title>
+  <title>ETF Service - Market Status (Mobile)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 20px;
+      margin: 10px;
       background: #f9f9f9;
     }
     h1 {
       color: #333;
+      font-size: 1.4em;
+      text-align: center;
     }
     table {
       width: 100%;
       border-collapse: collapse;
-      margin-top: 15px;
+      margin-top: 10px;
+      font-size: 0.9em;
     }
     th, td {
       border: 1px solid #ccc;
-      padding: 8px;
+      padding: 6px;
       text-align: center;
     }
     th {
@@ -36,6 +39,36 @@
     }
     tbody tr:nth-child(even) {
       background: #f2f2f2;
+    }
+    /* Ottimizzazione mobile */
+    @media (max-width: 600px) {
+      table, thead, tbody, th, td, tr {
+        display: block;
+      }
+      thead tr {
+        display: none;
+      }
+      tr {
+        margin-bottom: 12px;
+        border: 1px solid #ccc;
+        padding: 8px;
+        background: #fff;
+      }
+      td {
+        border: none;
+        text-align: left;
+        padding: 4px 0;
+      }
+      td::before {
+        font-weight: bold;
+        display: inline-block;
+        width: 120px;
+      }
+      td:nth-of-type(1)::before { content: "Simbolo:"; }
+      td:nth-of-type(2)::before { content: "Nome:"; }
+      td:nth-of-type(3)::before { content: "Prezzo:"; }
+      td:nth-of-type(4)::before { content: "PreviousClose:"; }
+      td:nth-of-type(5)::before { content: "DailyChange:"; }
     }
   </style>
 </head>
