--- a/public/market.html
+++ b/public/market.html
@@ -77,7 +77,7 @@
             <td>${etf.symbol}</td>
             <td>${etf.label}</td>
             <td>${etf.price != null ? Number(etf.price).toFixed(2) : "-"} €</td>
-            <<td>${etf.previousClose != null ? Number(etf.previousClose).toFixed(2) : "-"} €</td>
+            <td>${etf.previousClose != null ? Number(etf.previousClose).toFixed(2) : "-"} €</td>
             <td>${etf.dailyChange != null ? Number(etf.dailyChange).toFixed(2) : "-"} %</td>
           `;
           tbody.appendChild(row);
